--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
         "definition": "EnglishDescription",
         "transcription": "Transcription",
         "context": "Context",
-        "example": "ExampleSentence"
+        "example": "ExampleSentence",
+        "language": "Language"
     },
     "preferredTranscription": "uk",
     "preferredLanguage": "british"
