--- a/config.json
+++ b/config.json
@@ -23,6 +23,6 @@
         "example",
         "language"
     ],
-    "preferredTranscription": "uk",
+    "preferredRegion": "uk",
     "preferredLanguage": "british"
 }
